--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://vishalshah133.github.io/bstackdemo/",
   "name": "stackdemo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start"
   },
@@ -40,5 +43,8 @@
     "swagger-ui-react": "^3.52.3",
     "tailwindcss": "^1.9.6",
     "webpack": "^4.0.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
